doc/src/content/docs/0.5.x/getting-started/tutorial/single-device.mdx
---
title: 単一デバイス
description: 1台のAUTD3で焦点を生成する
sidebar:
  order: 1
slug: 0.5.x/getting-started/tutorial/single-device
---

import CodeTabs from "@components/CodeTabs.astro";
import { Code } from "astro-expressive-code/components";

ここでは, 一つのデバイスを駆動する方法について説明する.

## 依存プログラムのインストール

本チュートリアルでは[echocat](/autd3-sdk/0.5.x/api/link/echocat/)を利用する.
Windowsを使用する場合, [Npcap](https://npcap.com/)を「**WinPcap API-compatible Mode**」でインストールしておくこと.

以下は, 1台のAUTD3デバイスでアレイの中心から150 mm直上に焦点を生成し, 200 Hzの正弦波AMかける例である.

<CodeTabs>
  <Fragment slot="rust">
    まずは適当なプロジェクトを作成し, `autd3-rs`ライブラリを依存関係に追加する.
    焦点計算やAM変調のために, `autd3-rs-pattern`と`autd3-rs-modulation`も依存関係に追加する.
    また, デバイスとの通信を行うautd3-rs-link-echocatライブラリも依存関係に追加する.
    非同期ランタイムも必要なので, tokioも追加する.

    ```
    cargo new --bin autd3-sample && cd autd3-sample
    cargo add autd3-rs
    cargo add autd3-rs-pattern
    cargo add autd3-rs-modulation
    cargo add autd3-rs-link-echocat
    cargo add tokio --features full
    ```

    次に, `src/main.rs`ファイルを編集し, 以下のようにする.

    <Code code={"use autd3_rs::commands::{Modulation, Pattern, SetSilencer};\nuse autd3_rs::geometry::{Autd3, Geometry, offset};\nuse autd3_rs::units::{Hz, m, mm, s};\nuse autd3_rs::value::SamplingConfig;\nuse autd3_rs::{Client, ClientConfig};\nuse autd3_rs_link_echocat::EchocatLinkOption;\n\n#[tokio::main(flavor = \"multi_thread\")]\nasync fn main() -> Result<(), Box<dyn std::error::Error>> {\n    // Define a geometry consisting of a single AUTD3 device.\n    let geometry = Geometry::new(vec![Autd3::default()]);\n\n    // Open the client over an echocat link.\n    let client = Client::open(\n        &geometry,\n        EchocatLinkOption::default(),\n        ClientConfig::default(),\n    )\n    .await?;\n\n    // Generate a focus 150 mm above the array center.\n    let target = geometry.center() + offset(0.0 * mm, 0.0 * mm, 150.0 * mm);\n    let wavelength = autd3_rs_pattern::wavelength(340.0 * m / s);\n    let mut patterns = geometry.pattern_buffer();\n    autd3_rs_pattern::focus(\n        &geometry,\n        target,\n        wavelength,\n        &autd3_rs_pattern::FocusOption::default(),\n        &mut patterns,\n    );\n\n    // Apply a 200 Hz sine-wave AM.\n    let mut modulation = autd3_rs_modulation::modulation_buffer();\n    autd3_rs_modulation::sine(\n        200 * Hz,\n        &autd3_rs_modulation::SineOption {\n            sampling_config: SamplingConfig::FREQ_4K,\n            ..Default::default()\n        },\n        &mut modulation,\n    )?;\n\n    let mut builder = client.datagram_builder();\n    builder\n        .push(SetSilencer::default())\n        .push(Pattern::new(&patterns))\n        .push(Modulation::new(SamplingConfig::FREQ_4K, &modulation));\n    let frames = builder.build()?;\n    for frame in &frames {\n        client.send_checked(frame).await?;\n    }\n\n    tokio::signal::ctrl_c().await?;\n\n    client.stop().await?;\n    client.close().await?;\n\n    Ok(())\n}"} lang="rust" />

    そして, これを実行する.

    ```
    cargo run --release
    ```

    Linux, macOSでは, echocatを使用するのに管理者権限が必要になるかもしれない. その場合は,

    ```
    cargo build --release && sudo ./target/release/autd3_sample
    ```

    とすること.
  </Fragment>

  <Fragment slot="python">
    まずは適当なディレクトリを作成し, 仮想環境を用意してautd3ライブラリを追加する.
    また, デバイスとの通信を行うautd3-link-echocat, 焦点計算のautd3-pattern, AM変調のautd3-modulationも併せて追加する.

    ```
    mkdir autd3-sample && cd autd3-sample
    python3 -m venv .venv
    source .venv/bin/activate
    pip install autd3 autd3-pattern autd3-modulation autd3-link-echocat
    ```

    次に, `main.py`ファイルを以下のようにする.

    <Code code={"import asyncio\n\nimport numpy as np\n\nimport autd3_link_echocat as echocat\nimport autd3_modulation as modulation\nimport autd3_pattern as pattern\nfrom autd3 import Client, ClientConfig\nfrom autd3.commands import Modulation, Pattern, SetSilencer\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import Hz, m, s\nfrom autd3.value import SamplingConfig\n\n\n\nasync def main() -> None:\n    # Define a geometry consisting of a single AUTD3 device.\n    geometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n\n    # Open the client over an echocat link.\n    client = await Client.open(\n        geometry,\n        echocat.EchocatLinkOption(),\n        ClientConfig(),\n    )\n\n    # Generate a focus 150 mm above the array center.\n    target = geometry.center() + np.array([0.0, 0.0, 150.0])\n    wavelength = pattern.wavelength(340 * m / s)\n    patterns = geometry.pattern_buffer()\n    pattern.focus(\n        geometry,\n        target,\n        wavelength,\n        pattern.FocusOption(),\n        patterns,\n    )\n\n    # Apply a 200 Hz sine-wave AM.\n    mod_buf = modulation.modulation_buffer()\n    modulation.sine(\n        200 * Hz,\n        modulation.SineOption(sampling_config=SamplingConfig.FREQ_4K),\n        mod_buf,\n    )\n\n    builder = client.datagram_builder()\n    builder.push(SetSilencer())\n    builder.push(Pattern(patterns))\n    builder.push(Modulation(SamplingConfig.FREQ_4K, mod_buf))\n    for frame in builder.build():\n        await client.send_checked(frame)\n\n    try:\n        await asyncio.Event().wait()\n    finally:\n        await client.stop()\n        await client.close()\n\n\nif __name__ == \"__main__\":\n    asyncio.run(main())"} lang="python" />

    そして, これを実行する.

    ```
    python3 main.py
    ```

    Linux, macOSでは, echocatを使用するのに管理者権限が必要になるかもしれない. その場合は,

    ```
    sudo .venv/bin/python3 main.py
    ```

    とすること.
  </Fragment>

  <Fragment slot="csharp">
    まずは適当なディレクトリを作成し, autd3 ライブラリを追加する.
    また, デバイスとの通信を行う AUTD3.Link.Echocat, 焦点計算の AUTD3.Pattern, AM 変調の AUTD3.Modulation も併せて追加する.

    ```
    dotnet new console -o autd3-sample && cd autd3-sample
    dotnet add package AUTD3
    dotnet add package AUTD3.Pattern
    dotnet add package AUTD3.Modulation
    dotnet add package AUTD3.Link.Echocat
    ```

    次に, `Program.cs`ファイルを以下のようにする.

    <Code code={"using System;\nusing System.Numerics;\nusing System.Threading;\nusing System.Threading.Tasks;\nusing AUTD3;\nusing AUTD3.Link;\nusing static AUTD3.Units;\n\n// Define a geometry consisting of a single AUTD3 device.\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\n\n// Open the client over an echocat link.\nvar client = await Client.OpenAsync(\n    geometry,\n    new EchocatLinkOption(),\n    new ClientConfig()\n);\n\n// Generate a focus 150 mm above the array center.\nvar target = geometry.Center + new Vector3(0.0f, 0.0f, 150.0f);\nvar wavelength = Pattern.Wavelength(340.0f * m / s);\nvar patterns = geometry.PatternBuffer();\nPattern.Focus(\n    geometry,\n    target,\n    wavelength,\n    new FocusOption(),\n    patterns\n);\n\n// Apply a 200 Hz sine-wave AM.\nvar modulation = Modulation.ModulationBuffer();\nModulation.Sine(\n    200 * Hz,\n    new SineOption(samplingConfig: SamplingConfig.Freq4k),\n    modulation\n);\n\nvar builder = client.DatagramBuilder();\nbuilder.Push(new SetSilencer());\nbuilder.Push(new Pattern(patterns));\nbuilder.Push(new Modulation(SamplingConfig.Freq4k, modulation));\nvar frames = builder.Build();\nforeach (var frame in frames)\n{\n    await client.SendCheckedAsync(frame);\n}\n\nusing var cts = new CancellationTokenSource();\nConsole.CancelKeyPress += (_, e) =>\n{\n    e.Cancel = true;\n    cts.Cancel();\n};\n\ntry\n{\n    await Task.Delay(Timeout.InfiniteTimeSpan, cts.Token);\n}\ncatch (OperationCanceledException)\n{\n}\nfinally\n{\n    await client.StopAsync();\n    await client.CloseAsync();\n}"} lang="csharp" />

    そして, これを実行する.

    ```
    dotnet run -c Release
    ```

    Linux, macOSでは, echocatを使用するのに管理者権限が必要になるかもしれない.
  </Fragment>
</CodeTabs>
